修改图片存储目录至外部目录